--- a/examples/subcycles/models_energy.yaml
+++ b/examples/subcycles/models_energy.yaml
@@ -1,15 +1,12 @@
 # ground state (most parameters should be able to vary)
 base: 
-    # define Offset (y0) parameter
     Offset:
-      y0: [2, True, 0, 5]
-    # define Shirley background
+      y0: [4, True, 0, 5]
     Shirley:
         p_Shirley: [400, True, 1.0E-6, 1.0E+3]
-    # define peak type components
     GLP:
       A: [20, True, 5, 25]
-      x0: [84.5, True, 82, 88]
+      x0: [83, True, 80, 90]
       F: [1.0, True, 0.75, 2.5]
       m: [0.3, True, 0, 1]
     GLP:
@@ -18,15 +15,12 @@ base:
       F: ["GLP_01_F"]
       m: ["GLP_01_m"]
 
-# 2D model fit
+# 2D model fit (pinned parameters will be set to "base" Model fit result values)
 2D:
-    # define Offset (y0) parameter
     Offset:
-      y0: [2, True, 0, 5]
-    # define Shirley background
+      y0: [2, False, 0, 5]
     Shirley:
-        p_Shirley: [400, True, 1.0E-6, 1.0E+3]
-    # define peak type components
+        p_Shirley: [400, False, 1.0E-6, 1.0E+3]
     GLP:
       A: [20, False, 5, 25]
       x0: [84.5, True, 82, 88]
