--- a/examples/subcycles/models_time.yaml
+++ b/examples/subcycles/models_time.yaml
@@ -1,34 +1,41 @@
 # use these models to add time-dependence to a parameter in a 2D model
 # (available functions info: /src/trspecfit/functions/time.py)
 
+# use this to define an empty subcycle in a mcp.Dynamics model
+ModelNone:
+    none: {}
+
 IRF:
     # define Gauss to convolve everything with 
-    # (instrumental response function)
+    # (instrument response function)
     gaussCONV:
         sigma: [5.0E-2, True, 0, 1]
              
 MonoExpPos:
     # expFun(t, A, tau, t0, y0)
     expFun:
-        A: [1, True, 0, 5]
+        A: [1, True, 1E-3, 5]
+        tau: [2, True, 1E-1, 10]
+        t0: [0, False, 0, 1]
+        y0: [0, False, 0, 1]
+
+BiExpPos:
+    # expFun(t, A, tau, t0, y0)
+    expFun:
+        A: [2, True, 0, 5]
         tau: [2.5, True, 1, 10]
+        t0: [0, False, 0, 1]
+        y0: [0, False, 0, 1]
+    expFun:
+        A: [3, True, 1, 10]
+        tau: [0.5, True, 1E-1, 3]
         t0: [0, False, 0, 1]
         y0: [0, False, 0, 1]
 
 MonoExpNeg:
     # expFun(t, A, tau, t0, y0)
     expFun:
-        A: [-1, True, -5, 0]
-        tau: [2.5, True, 1, 10]
+        A: [-2, True, -5, -1E-3]
+        tau: [3, True, 1E-1, 10]
         t0: [0, False, 0, 1]
         y0: [0, False, 0, 1]
-
-MonoExpPosIRF:
-    gaussCONV:
-        sigma: [3, True, 0, 10]
-    expFun:
-        A: [5, True, 0, 5]
-        tau: [25, True, 10, 50]
-        t0: [0, False, 0, 1]
-        y0: [0, False, 0, 1]
-        
