--- a/examples/simulator/project.yaml
+++ b/examples/simulator/project.yaml
@@ -1,4 +1,4 @@
-# Project Configuration for trspecfit simulator
+# Project configuration for trspecfit simulator
 
 # Display settings (general verbosity)
 show_info: 1  # 0: no output, 1: important, 2: all, 3+: debugging
@@ -9,12 +9,12 @@ t_label: 'Time (arb, units)' # y -> time
 z_label: 'Intensity (arb. units)' # z -> intensity
 
 # Plot settings
-xdir: 'def'  # def(ault) or rev(erse)
-xtype: 'lin'  # lin or log
-ydir: 'def'  # def(ault) or rev(erse)
-ytype: 'lin'  # lin or log
-zColorMap: 'viridis' # colormap in 2D plots
-ztype: 'lin'  # lin or log (2D plots)
+x_dir: 'def'  # def(ault) or rev(erse)
+x_type: 'lin'  # lin or log
+y_dir: 'def'  # def(ault) or rev(erse)
+y_type: 'lin'  # lin or log
+z_colormap: 'viridis' # colormap in 2D plots
+z_type: 'lin'  # lin or log (2D plots)
 dpi_plt: 100 # figure display dpi
 dpi_save: 300 # figure save dpi
 res_mult: 5 # residual multiplier in figures
