--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trspecfit"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
     {name = "Johannes Mahl", email = "johannes.a.mahl@gmail.com"},
 ]
@@ -16,6 +16,7 @@ requires-python = ">=3.8"
 dependencies = [
 	"lmfit",
 	"emcee",
+	"tqdm",
 	"corner",
 	"numpy",
 	"pandas",
