--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trspecfit"
-version = "0.1.4"
+version = "0.1.5"
 authors = [
     {name = "Johannes Mahl", email = "johannes.a.mahl@gmail.com"},
 ]
@@ -15,6 +15,7 @@ requires-python = ">=3.8"
 
 dependencies = [
 	"lmfit",
+	"numdifftools",
 	"emcee",
 	"tqdm",
 	"corner",
