--- a/examples/simulator/models_energy.yaml
+++ b/examples/simulator/models_energy.yaml
@@ -2,7 +2,7 @@ single_peak:
     Offset:
       y0: [2, True, 0, 5]
     LinBack:
-      p_Linear: [4E-3, True, 0, 1] 
+      pLinear: [4E-3, True, 0, 1] 
     GLP:
       A: [10, True, 5, 15]
       x0: [10, True, 5, 15]
@@ -20,7 +20,7 @@ dependent_peaks:
     Offset:
       y0: [2, True, 0, 5]
     Shirley:
-      p_Shirley: [400, True, 1.0E-6, 1.0E+3] 
+      pShirley: [400, True, 1.0E-6, 1.0E+3] 
     GLP:
       A: [10, True, 5, 15]
       x0: [8, True, 3, 12]
