--- a/examples/subcycles/models_time.yaml
+++ b/examples/subcycles/models_time.yaml
@@ -10,32 +10,19 @@ IRF:
     # (instrument response function)
     gaussCONV:
         SD: [5.0E-2, True, 0, 1]
-             
-MonoExpPos:
-    # expFun(t, A, tau, t0, y0)
-    expFun:
-        A: [1, True, 1E-3, 5]
-        tau: [2, True, 1E-1, 10]
-        t0: [0, False, 0, 1]
-        y0: [0, False, 0, 1]
-
-BiExpPos:
-    # expFun(t, A, tau, t0, y0)
-    expFun:
-        A: [2, True, 0, 5]
-        tau: [2.5, True, 1, 10]
-        t0: [0, False, 0, 1]
-        y0: [0, False, 0, 1]
-    expFun:
-        A: [3, True, 1, 10]
-        tau: [0.5, True, 1E-1, 3]
-        t0: [0, False, 0, 1]
-        y0: [0, False, 0, 1]
 
 MonoExpNeg:
     # expFun(t, A, tau, t0, y0)
     expFun:
         A: [-2, True, -5, -1E-3]
-        tau: [3, True, 1E-1, 10]
+        tau: [2, True, 1E-1, 10]
+        t0: [0, False, 0, 1]
+        y0: [0, False, 0, 1]
+
+MonoExpPos:
+    # expFun(t, A, tau, t0, y0)
+    expFun:
+        A: ["-expFun_01_A"]
+        tau: ["expFun_01_tau"]
         t0: [0, False, 0, 1]
         y0: [0, False, 0, 1]
