--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+examples/subcycles_fits/
+examples/subcycles/simulated_data/
+examples/simulator/simulated_data/
