--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,26 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trspecfit"
-version = "0.3.6"
+version = "0.3.7"
 authors = [
     {name = "Johannes Mahl", email = "johannes.a.mahl@gmail.com"},
 ]
 description = "Fit 2D time- and energy-resolved spectroscopy data"
 keywords = ["fit", "fitting", "spectroscopy", "2D", "multi-dimensional", "time-resolved", "global fit"]
 readme = "README.md"
-requires-python = ">=3.9"
+license-files = ["LICENSE"]
+requires-python = ">=3.10"
+
+classifiers = [
+       "Development Status :: 3 - Alpha",
+       "Intended Audience :: Science/Research",
+       "Topic :: Scientific/Engineering :: Physics",
+       "License :: OSI Approved :: BSD License",
+       "Programming Language :: Python :: 3",
+       "Programming Language :: Python :: 3.10",
+       "Programming Language :: Python :: 3.11",
+       "Programming Language :: Python :: 3.12",
+]
 
 dependencies = [
 	"lmfit",
@@ -32,6 +44,8 @@ dependencies = [
 dev = [
     "pytest"
 ]
-
+   
 [project.urls]
 Repository = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/"
+"Bug Tracker" = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/issues"
+Discussions = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/discussions"
