--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ __marimo__/
 examples/subcycles_fits/
 examples/subcycles/simulated_data/
 examples/simulator/simulated_data/
+examples/simulatorBL931/simulated_data/
+.DS_Store
