--- a/examples/fitting_workflows/02_dependent_parameters/models_energy.yaml
+++ b/examples/fitting_workflows/02_dependent_parameters/models_energy.yaml
@@ -1,3 +1,6 @@
+# use these models to describe the energy-dependent data
+# (available functions info: /src/trspecfit/functions/energy.py)
+
 # ground state (most parameters should be able to vary)
 base: 
     Offset:
