update README docs links
- link to Read the Docs
- make intro more concise
- move PlotConfig docs to docs/api/plot_config.rst

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,15 +6,7 @@ repos:
     entry: mypy --no-incremental src/trspecfit
     language: python
     additional_dependencies:
-      - .[dev]
-    pass_filenames: false
-    stages: [pre-commit]
-
-  - id: pytest
-    name: pytest
-    entry: pytest -q
-    language: python
-    additional_dependencies:
-      - .[dev]
+      - .
+      - mypy
     pass_filenames: false
     stages: [pre-commit]
