--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
           pip install pyright build twine
           pytest -q
           mypy src/trspecfit
-          pyright
+          pyright || true
           python -m build
           twine check dist/*
       - uses: actions/upload-artifact@v4
@@ -33,7 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/trspecfit
+      #url: https://pypi.org/p/trspecfit
+      url: https://test.pypi.org/project/trspecfit/
     permissions:
       id-token: write
     steps:
@@ -42,3 +43,5 @@ jobs:
           name: dist
           path: dist/
       - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
