--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      #url: https://pypi.org/p/trspecfit
-      url: https://test.pypi.org/project/trspecfit/
+      url: https://pypi.org/p/trspecfit
+      #url: https://test.pypi.org/project/trspecfit/
     permissions:
       id-token: write
     steps:
@@ -43,5 +43,5 @@ jobs:
           name: dist
           path: dist/
       - uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
+        #with:
+        #  repository-url: https://test.pypi.org/legacy/
