--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trspecfit"
-version = "0.4.0"
+version = "0.4.1"
 authors = [
     {name = "Johannes Mahl", email = "johannes.a.mahl@gmail.com"},
 ]
@@ -34,7 +34,7 @@ dependencies = [
 	"scipy",
 	"ruamel.yaml",
 	"h5py",
-	"IPython",
+	"ipython",
 	"matplotlib",
 ]
 
@@ -44,7 +44,12 @@ dev = [
   "mypy",
   "pytest",
 ]
-   
+
+lab = [
+  "ipykernel>=6",
+  "jupyterlab>=4",
+]
+
 [project.urls]
 Repository = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/"
 "Bug Tracker" = "https://github.com/InfinityMonkeyAtWork/time-resolved-spectroscopy-fit/issues"
