--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,22 +24,23 @@ jobs:
 
       - name: Install package + dev tools
         run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
-          pip install pyright build twine
+          python -m venv .venv
+          .venv/bin/python -m pip install --upgrade pip
+          .venv/bin/pip install -e ".[dev]"
+          .venv/bin/pip install build twine
 
       - name: Run tests
-        run: pytest -q
+        run: .venv/bin/pytest -q
 
       - name: Run mypy
-        run: mypy src/trspecfit
+        run: .venv/bin/mypy src/trspecfit
 
       - name: Run pyright
         continue-on-error: true
-        run: pyright
+        run: .venv/bin/pyright
 
       - name: Build package
-        run: python -m build
+        run: .venv/bin/python -m build
 
       - name: Check package metadata
-        run: twine check dist/*
+        run: .venv/bin/twine check dist/*
