--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
         run: .venv/bin/mypy src/trspecfit
 
       - name: Run pyright
-        continue-on-error: true
+        # continue-on-error: true
         run: .venv/bin/pyright
 
       - name: Build package
