--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,11 @@ jobs:
       - name: Run tests
         run: .venv/bin/pytest -q
 
+      - name: Run ruff
+        run: |
+          .venv/bin/ruff check src/
+          .venv/bin/ruff format --check src/
+
       - name: Run mypy
         run: .venv/bin/mypy src/trspecfit
 
