--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,13 @@ repos:
   #   types: [python]
   #   stages: [pre-commit]
 
+  # - id: ruff-format
+  #   name: ruff (format)
+  #   entry: .venv/bin/ruff format
+  #   language: system
+  #   types: [python]
+  #   stages: [pre-commit]
+
   - id: mypy-trspecfit
     name: mypy (trspecfit)
     entry: .venv/bin/mypy --no-incremental src/trspecfit
