ruff check (linting) looks good

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Run ruff
         run: |
           .venv/bin/ruff check src/
-          .venv/bin/ruff format --check src/
+      #    .venv/bin/ruff format --check src/
       - name: Run mypy
         run: .venv/bin/mypy src/trspecfit
       - name: Run pyright
