--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Run ruff
         run: |
           .venv/bin/ruff check src/
-          .venv/bin/ruff format --check src/
+      #    .venv/bin/ruff format --check src/
 
       - name: Run mypy
         run: .venv/bin/mypy src/trspecfit
