--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
 - repo: local
   hooks:
-  # - id: ruff-check
-  #   name: ruff (lint)
-  #   entry: .venv/bin/ruff check --fix
-  #   language: system
-  #   types: [python]
-  #   stages: [pre-commit]
+  - id: ruff-check
+    name: ruff (lint)
+    entry: .venv/bin/ruff check --fix
+    language: system
+    types: [python]
+    stages: [pre-commit]
 
   # - id: ruff-format
   #   name: ruff (format)
