enabled ruff format in pre-commit, ci, release
Ruff setup:
Added C90, BLE, NPY to select; C901 to ignore
Fixed all violations: BLE001 (6× noqa), NPY002 (17× proper fix with default_rng)
Fixed test violations that surfaced when pre-commit ran on the full repo
Tooling polish:
Added pyright to pre-commit
Unified mypy config into pyproject.toml
Set exclude = ["examples/"] in ruff config
CI and release now run ruff check . and ruff format --check . covering src/ and tests/

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,11 +31,11 @@ jobs:
 
       - name: Run ruff
         run: |
-          .venv/bin/ruff check src/
-      #    .venv/bin/ruff format --check src/
+          .venv/bin/ruff check .
+          .venv/bin/ruff format --check .
 
       - name: Run mypy
-        run: .venv/bin/mypy src/trspecfit
+        run: .venv/bin/mypy
 
       - name: Run pyright
         # continue-on-error: true
