--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,10 +23,10 @@ jobs:
         run: .venv/bin/pytest -q
       - name: Run ruff
         run: |
-          .venv/bin/ruff check src/
-      #    .venv/bin/ruff format --check src/
+          .venv/bin/ruff check .
+          .venv/bin/ruff format --check .
       - name: Run mypy
-        run: .venv/bin/mypy src/trspecfit
+        run: .venv/bin/mypy
       - name: Run pyright
         run: .venv/bin/pyright
       - name: Run deptry
