--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,16 +8,23 @@ repos:
     types: [python]
     stages: [pre-commit]
 
-  # - id: ruff-format
-  #   name: ruff (format)
-  #   entry: .venv/bin/ruff format
-  #   language: system
-  #   types: [python]
-  #   stages: [pre-commit]
+  - id: ruff-format
+    name: ruff (format)
+    entry: .venv/bin/ruff format
+    language: system
+    types: [python]
+    stages: [pre-commit]
+
+  - id: pyright-trspecfit
+    name: pyright (trspecfit)
+    entry: .venv/bin/pyright
+    language: system
+    pass_filenames: false
+    stages: [pre-commit]
 
   - id: mypy-trspecfit
     name: mypy (trspecfit)
-    entry: .venv/bin/mypy --no-incremental src/trspecfit
+    entry: .venv/bin/mypy --no-incremental
     language: system
     pass_filenames: false
     stages: [pre-commit]
